Adjust title (fixes #2)

--- a/views/index.pug
+++ b/views/index.pug
@@ -16,7 +16,7 @@ block content
         p We're sorry.
 
     .form-container
-      h1 Report a Firefox Proton bug
+      h1 Report a bug
 
       form(action="/create", method="POST", enctype="multipart/form-data")
         label Fields marked with <span>*</span> are required. Please make sure to file this form on the device you're testing on. This allows us to correct version and the window size.
