--- a/views/index.pug
+++ b/views/index.pug
@@ -16,9 +16,37 @@ block content
         p We're sorry.
 
     .form-container
-      h1 Campaign finished
-      p The foxfooding campaign is now over. If you have found more bugs, please report them <a href="http://tinyurl.com/jzfyrkwe">here</a> (Bugzilla account required).
-      
+      h1 Report a bug
+
+      form(action="/create", method="POST", enctype="multipart/form-data")
+        label Fields marked with <span>*</span> are required. Please make sure to file this form on the device you're testing on. This allows us to correct version and the window size.
+        div(class="input-group")
+          label(for="firefox") Firefox Version&nbsp;<span>*</span><br><span class="field-note">(please check the pre-filled value and adjust if necessary)</span>
+          input(id="firefox", type="text", name="firefox", required, placeholder="for example: Firefox 88 / Windows")
+        div(class="input-group")
+          label(for="resolution") Window Size&nbsp;<span>*</span>
+          input(id="resolution", type="text", name="resolution", required, placeholder="for example: 1200x800")
+        h2 Issue Description
+        div(class="input-group")
+          label(for="summary") Short summary&nbsp;<span>*</span>
+          input(id="summary", type="text", name="summary", required)
+        div(class="input-group")
+          label(for="reproduce") <strong>Steps to reproduce&nbsp;<span>*</span></strong> - Write down everything you did immediately before you arrived at the bug as clearly as possible
+          textarea(name="reproduce", required, placeholder="1) Did ...\n2) Clicked on ...\n3) etc..")
+        div(class="input-group")
+          label(for="expected") <strong>Expected behavior&nbsp;<span>*</span></strong> - What were you hoping/expecting Firefox to do?
+          textarea(name="expected", required)
+        div(class="input-group")
+          label(for="actual") <strong>Actual behavior&nbsp;<span>*</span></strong> - What was the actual result, what did Firefox actually do?
+          textarea(name="actual", required)
+        div(class="input-group")
+          label(for="screenshot") Add a screenshot of what you see
+          input(id="screenshot", type="file", accept="image/*", name="screenshot")
+        div(class="input-group")
+          label(for="github") Your GitHub account name if you have one
+          input(id="github", type="text", name="github")
+        button(type="submit") Create Issue
+
   footer
     a(href="https://mozilla.org")
       img(src="https://www.mozilla.org/media/protocol/img/logos/mozilla/white.612a25fa976b.svg")
