--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   header
     a(href="/")
-      img(src="/logo.svg")
+      img(src="/logo.png", alt="Firefox Focus - Foxfooding Campaign")
 
   .container
     if submitted && success
