--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,8 +1,8 @@
 doctype html
 html(lang='en-US')
   head
-    title Firefox Proton Campaign - Report Issues
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    title Firefox Focus Campaign - Report Issues
+    link(rel='stylesheet', href='/style.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Zilla+Slab|Fira+Sans')
     link(rel='shortcut icon', type='image/png', sizes="196x196", href='/favicon.png')
     meta(name="viewport", content="width=device-width,minimum-scale=1.0,initial-scale=1,user-scalable=yes")
