--- a/public/style.css
+++ b/public/style.css
@@ -35,13 +35,12 @@ a:hover {
 header {
   width: 100vw;
   padding: 24px;
-  background-color: #1d1234;
+  background-color: #000;
   text-align: center;
 }
 
 header img {
-  width: 50vw;
-  max-width: 300px;
+  height: 100px;
 }
 
 .container {
