Better handle non-image uploads by adding a link to the original attachment (fixes #6)

--- a/views/index.pug
+++ b/views/index.pug
@@ -43,8 +43,8 @@ block content
           label(for="actual") <strong>Actual behavior&nbsp;<span>*</span></strong> - What was the actual result, what did Firefox actually do?
           textarea(name="actual", required)
         div(class="input-group")
-          label(for="screenshot") Add a screenshot of what you see
-          input(id="screenshot", type="file", accept="image/*", name="screenshot")
+          label(for="attachment") Add a screenshot/recording of what you see
+          input(id="attachment", type="file", accept="image/*,video/*", name="attachment")
         div(class="input-group")
           label(for="github") Your GitHub account name if you have one
           input(id="github", type="text", name="github")
