--- a/public/style.css
+++ b/public/style.css
@@ -35,7 +35,7 @@ a:hover {
 header {
   width: 100%;
   padding: 24px;
-  background-color: #000000;
+  background-color: #21123b;
   text-align: center;
 }
 
