--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   header
     a(href="/")
-      img(src="/logo.svg", alt="Firefox Logo")
+      img(src="/logo.jpg", alt="Firefox Logo")
 
   .container
     if submitted && success
