--- a/views/index.pug
+++ b/views/index.pug
@@ -17,9 +17,7 @@ block content
 
     .form-container
       h1 Stay tuned for the next campaign!
-      p.campaign-over Thank you for your contributions. The Foxfooding campaign is now over. If you would like to submit a bug, you can do it&nbsp;
-        a(href="https://github.com/mozilla-mobile/foxfooding_iOS_beta/issues/") here
-        | &nbsp;(you will need a GitHub account). Stay tuned for the next campaign!
+      p.campaign-over Thank you for your contributions. The Foxfooding campaign is now over. Stay tuned for the next campaign!
 
       //- h1 Report a bug - Foxfooding for iOS
 
