--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en-US')
   head
-    title Foxfooding for Firefox Translations - Report Issues
+    title Firefox Nightly 2022 Foxfooding - Report Issues
     link(rel='stylesheet', href='/style.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Zilla+Slab|Fira+Sans')
     link(rel='shortcut icon', type='image/png', sizes="196x196", href='/favicon.png')
