Adjust to next campaign

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ extends layout
 block content
   header
     a(href="/")
-      img(src="/logo.png", alt="Firefox Relay Logo")
+      img(src="/logo.png", alt="Firefox Logo")
 
   .container
     if submitted && success
@@ -22,7 +22,7 @@ block content
       //-     span issues on GitHub
       //-   | . Stay tuned for the next campaign!
 
-      h1 Report a bug - Firefox Relay Credential Manager Foxfooding
+      h1 Report a bug - Firefox Text Editing Changes Foxfooding
 
       form(action="/create", method="POST", enctype="multipart/form-data")
         label Fields marked with <span>*</span> are required. Please make sure to file this form on the device you're testing on. This allows us to autocomplete the correct version and the window size.
